color fixes on mobile device

--- a/style/style.css
+++ b/style/style.css
@@ -59,9 +59,11 @@ html {
     background-color: var(--background-color-dark);
     scroll-behavior: smooth;
     scroll-padding-top: 15dvh;
+    min-height: 100%;
 }
 body{
     min-height: 100dvh;
+    background-color: var(--background-color-dark);
 }
 
 .linear-gradient-text{
